@@ -1,7 +1,8 @@
 2012-08-29  Nick Alcock  <nick.alcock@oracle.com>
 
 	* libdtrace/dt_lex.l (yyinit): Call yyrestart().
-	* runtest.sh: Add @@no-xfail.  Avoid output corruption when tests hang.
+	* runtest.sh: Add @@no-xfail.  Avoid test-output corruption when tests
+	hang.  Revamp success/failure detection.
 	* test/unittest/profile-n/err.*.d: @@skip -> @@no-xfail.
 
 2012-08-10  Nick Alcock  <nick.alcock@oracle.com>
